tests/baselines/reference/iteratorSpreadInArray6.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInArray6.ts(15,14): error TS2769: No overload matches this call.
  Overload 1 of 2, '(...items: ConcatArray<number>[]): number[]', gave the following error.
    Argument of type 'symbol[]' is not assignable to parameter of type 'ConcatArray<number>'.
      Types of property 'slice' are incompatible.
        Type '(start?: number, end?: number) => symbol[]' is not assignable to type '(start?: number, end?: number) => number[]'.
          Type 'symbol[]' is not assignable to type 'number[]'.
            Type 'symbol' is not assignable to type 'number'.
  Overload 2 of 2, '(...items: (number | ConcatArray<number>)[]): number[]', gave the following error.
    Argument of type 'symbol[]' is not assignable to parameter of type 'number | ConcatArray<number>'.
      Type 'symbol[]' is not assignable to type 'ConcatArray<number>'.


==== tests/cases/conformance/es6/spread/iteratorSpreadInArray6.ts (1 errors) ====
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array: number[] = [0, 1];
    array.concat([...new SymbolIterator]);
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(...items: ConcatArray<number>[]): number[]', gave the following error.
!!! error TS2769:     Argument of type 'symbol[]' is not assignable to parameter of type 'ConcatArray<number>'.
!!! error TS2769:       Types of property 'slice' are incompatible.
!!! error TS2769:         Type '(start?: number, end?: number) => symbol[]' is not assignable to type '(start?: number, end?: number) => number[]'.
!!! error TS2769:           Type 'symbol[]' is not assignable to type 'number[]'.
!!! error TS2769:             Type 'symbol' is not assignable to type 'number'.
!!! error TS2769:   Overload 2 of 2, '(...items: (number | ConcatArray<number>)[]): number[]', gave the following error.
!!! error TS2769:     Argument of type 'symbol[]' is not assignable to parameter of type 'number | ConcatArray<number>'.
!!! error TS2769:       Type 'symbol[]' is not assignable to type 'ConcatArray<number>'.